Swagger y alogin alias
